--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,15 +7,9 @@ spring.datasource.platform= POSTGRESQL
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
-
+spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: false
 
 
-
-# Fix Postgres JPA Error:
-# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-
-
-  # JMX name of the application admin MBean.
 
