--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,11 @@
             <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.0</version>
+        </dependency>
 
 
 
